añadido: bloque arroba

--- a/src/main/resources/assets/examplemod/lang/en_us.json
+++ b/src/main/resources/assets/examplemod/lang/en_us.json
@@ -1,4 +1,7 @@
 {
   "item.examplemod.ratatin": "Ratatin",
-  "item.examplemod.skibidi_toilet":  "Skibidi toilet"
+  "item.examplemod.skibidi_toilet":  "Skibidi toilet",
+
+
+  "block.examplemod.arroba_block": "como se pone el arroba?"
 }
