añadido: bloque 2 con donkey triste

--- a/src/main/resources/assets/examplemod/lang/en_us.json
+++ b/src/main/resources/assets/examplemod/lang/en_us.json
@@ -3,5 +3,6 @@
   "item.examplemod.skibidi_toilet":  "Skibidi toilet",
 
 
-  "block.examplemod.arroba_block": "como se pone el arroba?"
+  "block.examplemod.arroba_block": "como se pone el arroba?",
+  "block.examplemod.dos_block": "2"
 }
