arreglado dropeo de bloques, añadido crafteo para el tridente

--- a/src/main/resources/assets/examplemod/lang/en_us.json
+++ b/src/main/resources/assets/examplemod/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.examplemod.ratatin": "Ratatin",
   "item.examplemod.skibidi_toilet":  "Skibidi Toilet",
   "item.examplemod.chainmail":  "Chain Mail",
+  "item.examplemod.ocean_rod": "Ocean Rod",
 
 
   "block.examplemod.arroba_block": "como se pone el arroba?",
